--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,7 +4,6 @@ body {
     background: #f5f5f5;
 }
 
-/* HEADER */
 header {
     background: #222;
     color: #fff;
@@ -23,7 +22,6 @@ header {
     font-size: 1.4rem;
 }
 
-/* NAV DERECHA */
 .zona-derecha {
     display: flex;
     align-items: center;
@@ -36,13 +34,13 @@ header {
     font-size: 1rem;
 }
 
-/* ICONO CARRITO */
 .icono-carrito {
     display: flex;
     align-items: center;
     gap: 6px;
     cursor: pointer;
     color: white;
+    margin: 10px;
 }
 
 .contador {
